--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 Скрипты дипломного проекта по реверс-инжинирингу олд-скульной игры для приставок Sega Mega Drive "Dune II: The battle for Arrakis"
 Проект доведен до стадии прототипа, в котором проверяются основные реализованные механики.
-После защиты диплома отложен на дальнюю полку в связи с нулевым выхлопом часы/деньги. Основной опыт в разработке получен, наработки проекта могут использоваться в других похожих проектах.
+После защиты диплома отложен на дальнюю полку в связи с отстутсвием рациональных мотивов в трате человекочасов. Основной опыт в разработке получен, наработки проекта могут использоваться в других похожих проектах, но это не точно.
